add more text on how the plugin automatically configures the CF depending on the version